# GameOfLife

serial/GameOfLife/: CMakeLists.txt
serial/GameOfLife/src/: Life.cpp  Life.h  main.cpp
serial/GameOfLife/test/: CMakeLists.txt  test_cases.cpp
